manifests/smb/tmp-admin-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: filebrowser-admin
  namespace: smb
spec:
  restartPolicy: Never
  containers:
    - name: admin
      image: filebrowser/filebrowser:v2
      command: ["sh", "-c", "sleep 3600"]
      volumeMounts:
        - name: config
          mountPath: /config
  volumes:
    - name: config
      persistentVolumeClaim:
        claimName: filebrowser-config
