manifests/smb/file-browser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: smb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:v2
          imagePullPolicy: IfNotPresent
          args:
            - --address=0.0.0.0
            - --port=80
            - --root=/srv
            - --database=/config/filebrowser.db
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: shared
              mountPath: /srv
            - name: config
              mountPath: /config

      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: shared-data
        - name: config
          persistentVolumeClaim:
            claimName: filebrowser-config
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: smb
spec:
  type: ClusterIP
  selector:
    app: filebrowser
  ports:
    - name: http
      port: 80
      targetPort: 80
